set quartodoc locally

--- a/python/docs/_quarto.yml
+++ b/python/docs/_quarto.yml
@@ -1,31 +1,78 @@
 project:
   type: website
-  # output_dir: _site
+  output-dir: _site
 
 website:
   title: "bvhar for Python"
   description: "Bayesian multivariate time series modeling"
   page-navigation: true
-  favicon: "../pkgdown/favicon/favicon.ico"
-  # navbar: 
-  # sidebar: 
+  # favicon: "../../pkgdown/favicon/favicon.ico"
+  favicon: "favicon.ico"
+  # page-footer:
+  navbar:
+    background: light
+    pinned: true
+    # logo: "../../man/figures/logo.png"
+    logo: "logo.png"
+    left:
+      - text: "Get started"
+        file: intro.qmd
+      # - text: "Reference"
+      #   file: reference/index.qmd
+      - text: Vignettes
+        menu:
+          - text: "bvhar"
+            file: bvhar.qmd
+          - text: "Random generation"
+            file: random.qmd
+          - text: "bvhar in R"
+            href: https://ygeunkim.github.io/package/bvhar/
+            target: _blank
+    right:
+      - icon: github
+        href: https://github.com/ygeunkim/bvhar/tree/feature/python/python
+        aria-label: bvhar-python github
+  sidebar:
+    style: floating
+    collapse-level: 1
+
+format:
+  html:
+    # sidebar: false
+    theme: 
+      light: [journal, mypkgdown.scss]
+    highlight-style: github-dark
+    css: mypkgdown.css
+    code-background: true
+    code-copy: true
+    code-overflow: wrap
+    toc: true
+
+include-in-header: 
+  - text: |
+      <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Anonymous+Pro" rel="stylesheet">
 
 quartodoc:
   title: Reference
   package: bvhar
   # sections:
-  #   - title: Blah
+  #   - title: Bayesian
   #     desc: "blah"
   #     contents:
   #       - function
-  #   - title: Blah
-  #     desc: "blah"
-  #     package: bvhar.design
+  #   - title: Utility functions
+  #     desc: "Related to configuration"
+  #     package: bvhar.utils
   #     contents:
   #       - function
 
-filters:
-  - interlinks
+# filters:
+#   - interlinks
 
-interlinks:
-  sources: {}
+# interlinks:
+#   sources: {}
+
+jupyter: python3
+execute: 
+  keep-ipynb: false
+  # execute-dir: project
