--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.0.9000"
 description = "Bayesian multivariate time series modeling"
 readme = "README.md"
 authors = [
-    { name = "Young Geun Kim", email = "ygeunkimstat@gmail.com" },
+    { name = "Young Geun Kim", email = "ygeunkimstat@gmail.com" }
 ]
 keywords = ["bayesian", "time series"]
 dependencies = [
