--- a/python/requirements/requirements-dev.txt
+++ b/python/requirements/requirements-dev.txt
@@ -2,37 +2,75 @@
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
 annotated-types=0.7.0=pypi_0
+anyio=4.4.0=pyhd8ed1ab_0
 appnope=0.1.4=pyhd8ed1ab_0
+argon2-cffi=23.1.0=pyhd8ed1ab_0
+argon2-cffi-bindings=21.2.0=py311h2725bcf_4
+arrow=1.3.0=pyhd8ed1ab_0
 asttokens=2.4.1=pyhd8ed1ab_0
-attrs=24.2.0=pypi_0
+async-lru=2.0.4=pyhd8ed1ab_0
+attrs=24.2.0=pyh71513ae_0
+babel=2.14.0=pyhd8ed1ab_0
 beartype=0.18.5=pypi_0
+beautifulsoup4=4.12.3=pyha770c72_0
+bleach=6.1.0=pyhd8ed1ab_0
 boost-cpp=1.85.0=hfcd56d9_4
+brotli-python=1.1.0=py311hdf8f085_1
+bvhar=0.0.0.9000=pypi_0
 bzip2=1.0.8=hfdf4475_7
 ca-certificates=2024.7.4=h8857fd0_0
-certifi=2024.7.4=pypi_0
-charset-normalizer=3.3.2=pypi_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+certifi=2024.7.4=pyhd8ed1ab_0
+cffi=1.17.0=py311h6e3bf6f_0
+charset-normalizer=3.3.2=pyhd8ed1ab_0
 click=8.1.7=pypi_0
 colorama=0.4.6=pyhd8ed1ab_0
 comm=0.2.2=pyhd8ed1ab_0
 debugpy=1.8.5=py311hbafa61a_0
 decorator=5.1.1=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
 eigen=3.4.0=h1c7c39f_0
+entrypoints=0.4=pyhd8ed1ab_0
 exceptiongroup=1.2.2=pyhd8ed1ab_0
 executing=2.0.1=pyhd8ed1ab_0
+fqdn=1.5.1=pyhd8ed1ab_0
 griffe=1.2.0=pypi_0
+h11=0.14.0=pyhd8ed1ab_0
+h2=4.1.0=pyhd8ed1ab_0
+hpack=4.0.0=pyh9f0ad1d_0
+httpcore=1.0.5=pyhd8ed1ab_0
+httpx=0.27.0=pyhd8ed1ab_0
+hyperframe=6.0.1=pyhd8ed1ab_0
 icu=75.1=h120a0e1_0
-idna=3.8=pypi_0
+idna=3.8=pyhd8ed1ab_0
 importlib-metadata=8.4.0=pyha770c72_0
-importlib-resources=6.4.4=pypi_0
 importlib_metadata=8.4.0=hd8ed1ab_0
+importlib_resources=6.4.4=pyhd8ed1ab_0
 iniconfig=2.0.0=pyhd8ed1ab_0
 ipykernel=6.29.5=pyh57ce528_0
 ipython=8.26.0=pyh707e725_0
+ipywidgets=8.1.5=pyhd8ed1ab_0
+isoduration=20.11.0=pyhd8ed1ab_0
 jedi=0.19.1=pyhd8ed1ab_0
-jsonschema=4.23.0=pypi_0
-jsonschema-specifications=2023.12.1=pypi_0
+jinja2=3.1.4=pyhd8ed1ab_0
+json5=0.9.25=pyhd8ed1ab_0
+jsonpointer=3.0.0=py311h6eed73b_0
+jsonschema=4.23.0=pyhd8ed1ab_0
+jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_0
+jupyter=1.0.0=pyhd8ed1ab_10
+jupyter-lsp=2.2.5=pyhd8ed1ab_0
 jupyter_client=8.6.2=pyhd8ed1ab_0
+jupyter_console=6.6.3=pyhd8ed1ab_0
 jupyter_core=5.7.2=py311h6eed73b_0
+jupyter_events=0.10.0=pyhd8ed1ab_0
+jupyter_server=2.14.2=pyhd8ed1ab_0
+jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
+jupyterlab=4.2.4=pyhd8ed1ab_0
+jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
+jupyterlab_server=2.27.3=pyhd8ed1ab_0
+jupyterlab_widgets=3.0.13=pyhd8ed1ab_0
 krb5=1.21.3=h37d8d59_0
 libblas=3.9.0=22_osx64_openblas
 libboost=1.85.0=hcca3243_4
@@ -52,57 +90,98 @@ libsqlite=3.46.0=h1b8f9f3_0
 libzlib=1.3.1=h87427d6_1
 llvm-openmp=18.1.8=h15ab845_1
 markdown-it-py=3.0.0=pypi_0
+markupsafe=2.1.5=py311he705e18_0
 matplotlib-inline=0.1.7=pyhd8ed1ab_0
 mdurl=0.1.2=pypi_0
+mistune=3.0.2=pyhd8ed1ab_0
+nbclient=0.10.0=pyhd8ed1ab_0
+nbconvert=7.16.4=hd8ed1ab_1
+nbconvert-core=7.16.4=pyhd8ed1ab_1
+nbconvert-pandoc=7.16.4=hd8ed1ab_1
+nbformat=5.10.4=pyhd8ed1ab_0
 ncurses=6.5=hf036a51_1
 nest-asyncio=1.6.0=pyhd8ed1ab_0
+notebook=7.2.1=pyhd8ed1ab_0
+notebook-shim=0.2.4=pyhd8ed1ab_0
 numpy=2.1.0=py311hc11d9cb_0
 openssl=3.3.1=hd23fc13_3
+overrides=7.7.0=pyhd8ed1ab_0
 packaging=24.1=pyhd8ed1ab_0
+pandoc=3.3=h694c41f_0
+pandocfilters=1.5.0=pyhd8ed1ab_0
 parso=0.8.4=pyhd8ed1ab_0
 pexpect=4.9.0=pyhd8ed1ab_0
 pickleshare=0.7.5=py_1003
 pip=24.2=pyhd8ed1ab_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
 platformdirs=4.2.2=pyhd8ed1ab_0
 pluggy=1.5.0=pyhd8ed1ab_0
 plum-dispatch=2.5.2=pypi_0
+prometheus_client=0.20.0=pyhd8ed1ab_0
 prompt-toolkit=3.0.47=pyha770c72_0
+prompt_toolkit=3.0.47=hd8ed1ab_0
 psutil=6.0.0=py311h72ae277_0
 ptyprocess=0.7.0=pyhd3deb0d_0
 pure_eval=0.2.3=pyhd8ed1ab_0
 pybind11=2.13.5=py311hf2f7c97_0
 pybind11-global=2.13.5=py311hf2f7c97_0
+pycparser=2.22=pyhd8ed1ab_0
 pydantic=2.8.2=pypi_0
 pydantic-core=2.20.1=pypi_0
 pygments=2.18.0=pyhd8ed1ab_0
+pyobjc-core=10.3.1=py311h9d23797_0
+pyobjc-framework-cocoa=10.3.1=py311h9d23797_0
+pysocks=1.7.1=pyha2e5f31_6
 pytest=8.3.2=pyhd8ed1ab_0
 python=3.11.9=h657bba9_0_cpython
 python-dateutil=2.9.0=pyhd8ed1ab_0
+python-fastjsonschema=2.20.0=pyhd8ed1ab_0
+python-json-logger=2.0.7=pyhd8ed1ab_0
 python_abi=3.11=5_cp311
-pyyaml=6.0.2=pypi_0
+pytz=2024.1=pyhd8ed1ab_0
+pyyaml=6.0.2=py311h72ae277_0
 pyzmq=26.2.0=py311h95f92fe_0
+qtconsole-base=5.5.2=pyha770c72_0
+qtpy=2.4.1=pyhd8ed1ab_0
 quartodoc=0.7.6=pypi_0
 readline=8.2=h9e318b2_1
-referencing=0.35.1=pypi_0
-requests=2.32.3=pypi_0
+referencing=0.35.1=pyhd8ed1ab_0
+requests=2.32.3=pyhd8ed1ab_0
+rfc3339-validator=0.1.4=pyhd8ed1ab_0
+rfc3986-validator=0.1.1=pyh9f0ad1d_0
 rich=13.7.1=pypi_0
-rpds-py=0.20.0=pypi_0
+rpds-py=0.20.0=py311h295b1db_0
+send2trash=1.8.3=pyh31c8845_0
 setuptools=72.2.0=pyhd8ed1ab_0
 six=1.16.0=pyh6c4a22f_0
+sniffio=1.3.1=pyhd8ed1ab_0
+soupsieve=2.5=pyhd8ed1ab_1
 sphobjinv=2.3.1.1=pypi_0
 stack_data=0.6.2=pyhd8ed1ab_0
 tabulate=0.9.0=pypi_0
+terminado=0.18.1=pyh31c8845_0
+tinycss2=1.3.0=pyhd8ed1ab_0
 tk=8.6.13=h1abcd95_1
 tomli=2.0.1=pyhd8ed1ab_0
 tornado=6.4.1=py311h72ae277_0
 traitlets=5.14.3=pyhd8ed1ab_0
+types-python-dateutil=2.9.0.20240821=pyhd8ed1ab_0
+typing-extensions=4.12.2=hd8ed1ab_0
 typing_extensions=4.12.2=pyha770c72_0
+typing_utils=0.1.0=pyhd8ed1ab_0
 tzdata=2024a=h0c530f3_0
-urllib3=2.2.2=pypi_0
+uri-template=1.3.0=pyhd8ed1ab_0
+urllib3=2.2.2=pyhd8ed1ab_1
 watchdog=4.0.2=pypi_0
 wcwidth=0.2.13=pyhd8ed1ab_0
+webcolors=24.8.0=pyhd8ed1ab_0
+webencodings=0.5.1=pyhd8ed1ab_2
+websocket-client=1.8.0=pyhd8ed1ab_0
 wheel=0.44.0=pyhd8ed1ab_0
+widgetsnbextension=4.0.13=pyhd8ed1ab_0
 xz=5.2.6=h775f41a_0
+yaml=0.2.5=h0d85af4_2
 zeromq=4.3.5=hde137ed_4
 zipp=3.20.0=pyhd8ed1ab_0
+zstandard=0.23.0=py311h51fa951_0
 zstd=1.5.6=h915ae27_0
