start to make ols module

--- a/python/docs/_quarto.yml
+++ b/python/docs/_quarto.yml
@@ -17,8 +17,8 @@ website:
     left:
       - text: "Get started"
         file: intro.qmd
-      # - text: "Reference"
-      #   file: reference/index.qmd
+      - text: "Reference"
+        file: reference/index.qmd
       - text: Vignettes
         menu:
           - text: "bvhar"
