make ols python classes

--- a/python/requirements/environment-dev.yml
+++ b/python/requirements/environment-dev.yml
@@ -101,6 +101,7 @@ dependencies:
   - openssl=3.3.1
   - overrides=7.7.0
   - packaging=24.1
+  - pandas=2.2.2
   - pandoc=3.3
   - pandocfilters=1.5.0
   - parso=0.8.4
@@ -128,6 +129,7 @@ dependencies:
   - python-dateutil=2.9.0
   - python-fastjsonschema=2.20.0
   - python-json-logger=2.0.7
+  - python-tzdata=2024.1
   - python_abi=3.11
   - pytz=2024.1
   - pyyaml=6.0.2
