--- a/.github/workflows/py-conda-check.yaml
+++ b/.github/workflows/py-conda-check.yaml
@@ -36,19 +36,20 @@ jobs:
           python-version: ${{ matrix.python-version }}
           auto-activate-base: false
       
-      - name: Initialize conda
-        if: runner.os == 'Windows'
-        run: |
-          source $CONDA/condabin/conda.bash hook
-          conda init bash
+      - name: Initialize conda on non-windows
+        if: runner.os != 'Windows'
+        run: conda init
         shell: bash
+      
+      - name: Initialize conda on Windows
+        if: runner.os == 'Windows'
+        run: call C:\Users\runneradmin\miniconda3\condabin\conda.bat init
+      
+      - name: Verify conda
+        run: conda info
 
-      - name: Install
+      - name: Install and test
         run: |
           conda activate bvhar-env
           pip install -e .
-    
-      - name: Test
-        run: |
-          conda activate bvhar-env
           pytest
