use sys prefix instead of conda prefix

--- a/python/requirements/environment.yml
+++ b/python/requirements/environment.yml
@@ -8,7 +8,8 @@ dependencies:
   - pandas
   - pip
   - pybind11
+  - llvm-openmp
   - pytest
-  - python>=3.8
+  - python>=3.9
   - pip:
       - quartodoc
