--- a/.github/workflows/py-conda-check.yaml
+++ b/.github/workflows/py-conda-check.yaml
@@ -28,6 +28,20 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      
+      - name: Set LLVM on macOS
+        if: runner.os == 'macOS'
+        run: |
+          brew update
+          brew install llvm libomp
+          LLVM_LOC=$(brew --prefix llvm)
+          OMP_LOC=$(brew --prefix libomp)
+          echo "LLVM_LOC=$LLVM_LOC" >> $GITHUB_ENV
+          echo "OMP_LOC=$OMP_LOC" >> $GITHUB_ENV
+          echo "CC=$LLVM_LOC/bin/clang" >> $GITHUB_ENV
+          echo "CXX=$LLVM_LOC/bin/clang++" >> $GITHUB_ENV
+          echo "CPPFLAGS=-I$LLVM_LOC/include -I$OMP_LOC/include" >> $GITHUB_ENV
+          echo "LDFLAGS=-L$LLVM_LOC/lib -L$OMP_LOC/lib" >> $GITHUB_ENV
 
       - uses: conda-incubator/setup-miniconda@v3
         with:
@@ -37,35 +51,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
           auto-activate-base: false
       
-      - name: Set LLVM on macOS
-        if: runner.os == 'macOS'
-        run: |
-          brew update
-          brew install llvm libomp
-          echo "LLVM_LOC=$(brew --prefix llvm)" >> $GITHUB_ENV
-          echo "OMP_LOC=$(brew --prefix libomp)" >> $GITHUB_ENV
-          echo "CC=$(LLVM_LOC)/bin/clang" >> $GITHUB_ENV
-          echo "CXX=$(LLVM_LOC)/bin/clang++" >> $GITHUB_ENV
-          echo "CPPFLAGS=-I$(LLVM_LOC)/include -I$(OMP_LOC)/include" >> $GITHUB_ENV
-          echo "LDFLAGS=-L$(LLVM_LOC)/lib -L$(OMP_LOC)/lib" >> $GITHUB_ENV
-      
       - name: Verify conda
-        if: runner.os != 'macOS'
         run: |
           conda info
           conda list
           conda env list
-      
-      - name: Verify conda
-        if: runner.os == 'macOS'
-        run: |
-          conda info
-          conda list
-          conda env list
-          echo "CC: $CC"
-          echo "CXX: $CXX"
-          echo "CPPFLAGS: $CPPFLAGS"
-          echo "LDFLAGS: $LDFLAGS"
 
       - name: Install
         run: conda run -n bvhar-env pip install -e .
