--- a/.github/workflows/py-conda-check.yaml
+++ b/.github/workflows/py-conda-check.yaml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
     
     defaults:
       run:
@@ -58,7 +58,10 @@ jobs:
           conda env list
 
       - name: Install
-        run: conda run -n bvhar-env pip install .
+        run: |
+          conda run -n bvhar-env pip install .
+          conda run -n bvhar-env pip list
+          conda run -n bvhar-env conda list
       
       - name: OpenMP check
         run: conda run -n bvhar-env python -c "from bvhar.utils import checkomp; checkomp.check_omp()"
