--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -30,7 +30,7 @@ classifiers=[
   "Programming Language :: Python :: Implementation :: CPython",
   "Topic :: Scientific/Engineering :: Mathematics"
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {file = "LICENSE"}
 
 [project.urls]
@@ -64,8 +64,7 @@ test = [
 
 [build-system]
 requires = [
-    "setuptools",
-    "wheel",
+    "setuptools>=42",
     "pybind11"
 ]
 build-backend = "setuptools.build_meta"
