try pip check ci

--- a/python/requirements/requirements.txt
+++ b/python/requirements/requirements.txt
@@ -1,48 +1,4 @@
-annotated-types==0.7.0
-attrs==24.2.0
-beartype==0.18.5
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-exceptiongroup==1.2.2
-griffe==1.2.0
-idna==3.8
-importlib_metadata==8.4.0
-importlib_resources==6.4.4
-iniconfig==2.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-markdown-it-py==3.0.0
-mdurl==0.1.2
-numpy==2.1.0
-packaging==24.1
-pandas==2.2.2
-pip==24.2
-pluggy==1.5.0
-plum-dispatch==2.5.2
-pybind11==2.13.5
-pybind11_global==2.13.5
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-pytest==8.3.2
-python-dateutil==2.9.0
-pytz==2024.1
-PyYAML==6.0.2
-quartodoc==0.7.6
-referencing==0.35.1
-requests==2.32.3
-rich==13.7.1
-rpds-py==0.20.0
-setuptools==72.2.0
-six==1.16.0
-sphobjinv==2.3.1.1
-tabulate==0.9.0
-tomli==2.0.1
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-watchdog==4.0.2
-wheel==0.44.0
-zipp==3.20.0
+pybind11
+numpy
+pandas
+pytest
