--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -39,7 +39,7 @@ source = "https://github.com/ygeunkim/bvhar/tree/feature/python"
 tracker = "https://github.com/ygeunkim/bvhar/issues"
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["src"]
 include = ["bvhar", "bvhar.*"]
 
 [tool.setuptools.package-data]
@@ -70,4 +70,4 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
-testpaths = ["bvhar"]
+testpaths = ["tests"]
