add test coverage for python

--- a/codecov.yml
+++ b/codecov.yml
@@ -15,3 +15,12 @@ coverage:
 
 codecov:
   token: token
+
+flags:
+  r-package:
+    default: true
+    paths:
+      - .
+  python:
+    paths:
+      - python
