--- a/.github/workflows/py-conda-check.yaml
+++ b/.github/workflows/py-conda-check.yaml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: ['feature/python'] # change to [main, master, 'hotfix/*', 'release/*', develop] after finish
+    branches: ['feature/python', 'feature/py-*'] # change to [main, master, 'hotfix/*', 'release/*', develop, 'feature/py-*'] after finish
 #   pull_request:
 #     branches: [main, master, 'hotfix/*', 'release/*', develop]
 
