--- a/python/requirements/environment-dev.yml
+++ b/python/requirements/environment-dev.yml
@@ -2,190 +2,15 @@ name: bvhar-dev
 channels:
   - conda-forge
 dependencies:
-  - anyio=4.4.0
-  - appnope=0.1.4
-  - argon2-cffi=23.1.0
-  - argon2-cffi-bindings=21.2.0
-  - arrow=1.3.0
-  - asttokens=2.4.1
-  - async-lru=2.0.4
-  - attrs=24.2.0
-  - babel=2.14.0
-  - beautifulsoup4=4.12.3
-  - bleach=6.1.0
-  - boost-cpp=1.85.0
-  - brotli-python=1.1.0
-  - bzip2=1.0.8
-  - ca-certificates=2024.7.4
-  - cached-property=1.5.2
-  - cached_property=1.5.2
-  - certifi=2024.7.4
-  - cffi=1.17.0
-  - charset-normalizer=3.3.2
-  - colorama=0.4.6
-  - comm=0.2.2
-  - debugpy=1.8.5
-  - decorator=5.1.1
-  - defusedxml=0.7.1
-  - eigen=3.4.0
-  - entrypoints=0.4
-  - exceptiongroup=1.2.2
-  - executing=2.0.1
-  - fqdn=1.5.1
-  - h11=0.14.0
-  - h2=4.1.0
-  - hpack=4.0.0
-  - httpcore=1.0.5
-  - httpx=0.27.0
-  - hyperframe=6.0.1
-  - icu=75.1
-  - idna=3.8
-  - importlib-metadata=8.4.0
-  - importlib_metadata=8.4.0
-  - importlib_resources=6.4.4
-  - iniconfig=2.0.0
-  - ipykernel=6.29.5
-  - ipython=8.26.0
-  - ipywidgets=8.1.5
-  - isoduration=20.11.0
-  - jedi=0.19.1
-  - jinja2=3.1.4
-  - json5=0.9.25
-  - jsonpointer=3.0.0
-  - jsonschema=4.23.0
-  - jsonschema-specifications=2023.12.1
-  - jsonschema-with-format-nongpl=4.23.0
-  - jupyter=1.0.0
-  - jupyter-lsp=2.2.5
-  - jupyter_client=8.6.2
-  - jupyter_console=6.6.3
-  - jupyter_core=5.7.2
-  - jupyter_events=0.10.0
-  - jupyter_server=2.14.2
-  - jupyter_server_terminals=0.5.3
-  - jupyterlab=4.2.4
-  - jupyterlab_pygments=0.3.0
-  - jupyterlab_server=2.27.3
-  - jupyterlab_widgets=3.0.13
-  - krb5=1.21.3
-  - libblas=3.9.0
-  - libboost=1.85.0
-  - libboost-devel=1.85.0
-  - libboost-headers=1.85.0
-  - libcblas=3.9.0
-  - libcxx=18.1.8
-  - libedit=3.1.20191231
-  - libexpat=2.6.2
-  - libffi=3.4.2
-  - libgfortran=5.0.0
-  - libgfortran5=13.2.0
-  - liblapack=3.9.0
-  - libopenblas=0.3.27
-  - libsodium=1.0.18
-  - libsqlite=3.46.0
-  - libzlib=1.3.1
-  - llvm-openmp=18.1.8
-  - markupsafe=2.1.5
-  - matplotlib-inline=0.1.7
-  - mistune=3.0.2
-  - nbclient=0.10.0
-  - nbconvert=7.16.4
-  - nbconvert-core=7.16.4
-  - nbconvert-pandoc=7.16.4
-  - nbformat=5.10.4
-  - ncurses=6.5
-  - nest-asyncio=1.6.0
-  - notebook=7.2.1
-  - notebook-shim=0.2.4
-  - numpy=2.1.0
-  - openssl=3.3.1
-  - overrides=7.7.0
-  - packaging=24.1
-  - pandas=2.2.2
-  - pandoc=3.3
-  - pandocfilters=1.5.0
-  - parso=0.8.4
-  - pexpect=4.9.0
-  - pickleshare=0.7.5
-  - pip=24.2
-  - pkgutil-resolve-name=1.3.10
-  - platformdirs=4.2.2
-  - pluggy=1.5.0
-  - prometheus_client=0.20.0
-  - prompt-toolkit=3.0.47
-  - prompt_toolkit=3.0.47
-  - psutil=6.0.0
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.3
-  - pybind11=2.13.5
-  - pybind11-global=2.13.5
-  - pycparser=2.22
-  - pygments=2.18.0
-  - pyobjc-core=10.3.1
-  - pyobjc-framework-cocoa=10.3.1
-  - pysocks=1.7.1
-  - pytest=8.3.2
-  - python=3.11.9
-  - python-dateutil=2.9.0
-  - python-fastjsonschema=2.20.0
-  - python-json-logger=2.0.7
-  - python-tzdata=2024.1
-  - python_abi=3.11
-  - pytz=2024.1
-  - pyyaml=6.0.2
-  - pyzmq=26.2.0
-  - qtconsole-base=5.5.2
-  - qtpy=2.4.1
-  - readline=8.2
-  - referencing=0.35.1
-  - requests=2.32.3
-  - rfc3339-validator=0.1.4
-  - rfc3986-validator=0.1.1
-  - rpds-py=0.20.0
-  - send2trash=1.8.3
-  - setuptools=72.2.0
-  - six=1.16.0
-  - sniffio=1.3.1
-  - soupsieve=2.5
-  - stack_data=0.6.2
-  - terminado=0.18.1
-  - tinycss2=1.3.0
-  - tk=8.6.13
-  - tomli=2.0.1
-  - tornado=6.4.1
-  - traitlets=5.14.3
-  - types-python-dateutil=2.9.0.20240821
-  - typing-extensions=4.12.2
-  - typing_extensions=4.12.2
-  - typing_utils=0.1.0
-  - tzdata=2024a
-  - uri-template=1.3.0
-  - urllib3=2.2.2
-  - wcwidth=0.2.13
-  - webcolors=24.8.0
-  - webencodings=0.5.1
-  - websocket-client=1.8.0
-  - wheel=0.44.0
-  - widgetsnbextension=4.0.13
-  - xz=5.2.6
-  - yaml=0.2.5
-  - zeromq=4.3.5
-  - zipp=3.20.0
-  - zstandard=0.23.0
-  - zstd=1.5.6
+  - python>=3.10
+  - boost-cpp>=1.84.0
+  - eigen>=3.4.0
+  - pybind11
+  - numpy
+  - pandas
+  - pip
+  - pytest
+  - pytest-cov
+  - jupyter
   - pip:
-      - annotated-types==0.7.0
-      - beartype==0.18.5
-      - bvhar==0.0.0.9000
-      - click==8.1.7
-      - griffe==1.2.0
-      - markdown-it-py==3.0.0
-      - mdurl==0.1.2
-      - plum-dispatch==2.5.2
-      - pydantic==2.8.2
-      - pydantic-core==2.20.1
-      - quartodoc==0.7.6
-      - rich==13.7.1
-      - sphobjinv==2.3.1.1
-      - tabulate==0.9.0
-      - watchdog==4.0.2
+      - quartodoc
