--- a/python/docs/_quarto.yml
+++ b/python/docs/_quarto.yml
@@ -6,25 +6,21 @@ website:
   title: "bvhar for Python"
   description: "Bayesian multivariate time series modeling"
   page-navigation: true
-  # favicon: "../../pkgdown/favicon/favicon.ico"
   favicon: "favicon.ico"
   # page-footer:
   navbar:
     background: light
     pinned: true
-    # logo: "../../man/figures/logo.png"
     logo: "logo.png"
     left:
       - text: "Get started"
-        file: intro.qmd
+        file: get_started.qmd
       - text: "Reference"
         file: reference/index.qmd
       - text: Vignettes
         menu:
           - text: "bvhar"
-            file: bvhar.qmd
-          - text: "Random generation"
-            file: random.qmd
+            file: intro.qmd
           - text: "bvhar in R"
             href: https://ygeunkim.github.io/package/bvhar/
             target: _blank
