--- a/.github/workflows/py-github-check.yaml
+++ b/.github/workflows/py-github-check.yaml
@@ -4,7 +4,7 @@ on:
   #   pull_request:
   #     branches: [main, master, 'hotfix/*', 'release/*', develop]
 
-name: py-sdist-check
+name: py-github-check
 
 jobs:
   build:
@@ -29,6 +29,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       
+      - name: Verify git
+        run: git --version
+    
       - name: Set system dependencies on Linux
         if: runner.os == 'Linux'
         run: |
@@ -105,33 +108,12 @@ jobs:
         run: |
           dir ${{ env.EIGEN_INCLUDE_DIR }}
           dir ${{ env.BOOST_INCLUDE_DIR }}
-          
-      - name: Install requirements
+
+      - name: Install package from github
+        # change branch after finishing the feature
         run: |
           pip install --upgrade pip
-          pip install -r requirements/requirements.txt
-      
-      - name: Verify pip
-        run: pip list
-
-      - name: Build sdist
-        run: |
-          pip install build
-          python -m build --sdist .
-
-      - name: Install sdist on non-Windows
-        if: runner.os != 'Windows'
-        run: pip install dist/*.tar.gz
-      
-      - name: Install sdist on Windows
-        if: runner.os == 'Windows'
-        run: |
-          $dist = (
-            Get-ChildItem -Path dist |
-            Where-Object { $_.Name -like "*.zip" -or $_.Name -like "*.tar.gz" } |
-            Select-Object -First 1
-          ).FullName
-          pip install $dist
+          python -m pip install git+https://github.com/ygeunkim/bvhar.git@feature/python#subdirectory=python[test]
       
       - name: Verify installation
         run: pip list
