--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -34,9 +34,9 @@ requires-python = ">=3.10"
 license = {file = "LICENSE"}
 
 [project.urls]
-homepage = "https://github.com/ygeunkim/bvhar/tree/feature/python"
-source = "https://github.com/ygeunkim/bvhar/tree/feature/python"
-tracker = "https://github.com/ygeunkim/bvhar/issues"
+"Homepage" = "https://github.com/ygeunkim/bvhar/tree/feature/python"
+"Bug Reports" = "https://github.com/ygeunkim/bvhar/issues"
+"Source" = "https://github.com/ygeunkim/bvhar/tree/feature/python"
 
 [tool.setuptools.packages.find]
 where = ["src"]
