--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,7 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, develop]
+    branches: [main, master, develop, release/*]
   pull_request:
     branches: [main, master]
   workflow_dispatch:
@@ -49,7 +49,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request' && "!startsWith(github.ref, 'refs/heads/release/')"
         uses: JamesIves/github-pages-deploy-action@v4.6.1
         with:
           token: ${{ secrets.YGEUNKIM_PAGE_PAT }}
