--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -91,7 +91,8 @@ jobs:
         uses: r-lib/actions/check-r-package@v2
         if: startsWith(github.ref, 'refs/heads/release/')
         with:
-          args: 'c("--as-cran")'
+          args: 'c("--no-manual", "--as-cran")'
+          build_args: 'c("--no-manual")'
           error-on: '"warning"'
           check-dir: '"check"'
           upload-snapshots: false
